There's no need to collect(toList())
you can almost always just toList() instead.